# Financial-Document-Management-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  auth.py  documents.py  rag.py  roles.py  users.py
app/core/: config.py  security.py
app/db/: init_db.py
app/models/: __init__.py  associations.py  document.py  role.py  user.py
app/schemas/: document.py  rag.py  role.py  user.py
app/services/: auth_service.py  document_reader.py  document_service.py  file_service.py  rag_service.py  role_service.py
