[project]
name = "fastapi-financial-document-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb==1.0.20",
    "email-validator==2.3.0",
    "fastapi==0.116.1",
    "langchain-chroma==0.2.5",
    "langchain-core==0.3.74",
    "langchain-huggingface==0.3.1",
    "langchain-text-splitters==0.3.9",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.10.1",
    "pypdf==5.9.0",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "sentence-transformers==5.1.0",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
]
